<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="50dp"
    app:cardCornerRadius="18dp"
    android:layout_margin="8dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="6dp"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/time"
                    android:text="@string/published_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/source"
                    android:textStyle="bold"
                    android:text="@string/source"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_title"
                    android:text="@string/title"
                    android:maxLines="2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:id="@+id/description"
                    android:text="@string/description"
                    android:textColor="@color/blue"
                    android:maxLines="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>

        </LinearLayout>
        <ImageView
            android:id="@+id/img_headline"
            android:layout_width="0dp"
            android:src="@drawable/not_available"
            android:scaleType="centerCrop"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </ImageView>
    </LinearLayout>
</androidx.cardview.widget.CardView>