<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/red"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/app_name"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/background2"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="50dp"
                android:background="@drawable/background1"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/login"
                    android:textSize="22sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="40dp"
                    android:text="@string/sign_up"
                    android:textSize="22sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/signin_into_your_account"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="Email"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:drawableEnd="@drawable/ic_email"
                        android:background="@drawable/edittext_background"
                        android:hint="johndoe@gmail.com"
                        android:inputType="textEmailAddress"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="Password"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/edittext_background"
                        android:hint="Password"
                        android:drawableEnd="@drawable/ic_password"
                        android:inputType="textPassword"
                        android:padding="5dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/forgot_password"
                    android:text="@string/forgot_password"
                    android:layout_gravity="end"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:layout_marginEnd="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="Login with"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/google"
                        android:src="@drawable/google"
                        android:layout_marginStart="120dp"
                        android:layout_marginEnd="0dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"/>

                    <ImageView
                        android:id="@+id/facebook"
                        android:src="@drawable/facebook"
                        android:layout_marginStart="50dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_marginBottom="100dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="Don't have an Account ?  "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/register_now"
                        android:text="Register Now"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_button"
        android:orientation="horizontal"
        android:background="@drawable/background3"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>